# compact-washing-machine-firmware-demo

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  gcovr.cfg
.devcontainer/: Dockerfile
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/compact_washing_machine_firmware_demo/: AutoDetergent.hpp  AutoSoftener.hpp  IntMessageType.hpp  KeepFresh.hpp  RincingRounds.hpp  RincingRpms.hpp  Temperature.hpp  WashingMachine.hpp  WashingMachineMode.hpp  compact_washing_machine_firmware_demo.hpp  parse.hpp  parser.hpp  sample_library.hpp  utils.hpp
include/compact_washing_machine_firmware_demo/utils/: bitSpanFromBitset.hpp  bitsetFromBitSpan.hpp  enumOptionPattern.hpp  utils.hpp
src/: CMakeLists.txt
src/compact_washing_machine_firmware_demo/: CMakeLists.txt  compact_washing_machine_firmware_demo.cpp  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
